[gd_scene load_steps=6 format=3 uid="uid://cmehhub0u3dja"]

[ext_resource type="Texture2D" uid="uid://dvikmfqvrkd56" path="res://assets/sheet.png" id="1_mkf8s"]
[ext_resource type="Script" uid="uid://ctr8wo0ja1ki8" path="res://scripts/bullet.gd" id="1_y25gk"]
[ext_resource type="AudioStream" uid="uid://r4m8g8i5ud03" path="res://assets/laserLarge_003.ogg" id="3_l5glv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y25gk"]
size = Vector2(10, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5glv"]
atlas = ExtResource("1_mkf8s")
region = Rect2(855.909, 131.216, 9.30286, 36.8584)

[node name="Bullet" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_y25gk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_y25gk")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture = SubResource("AtlasTexture_l5glv")

[node name="Timer" type="Timer" parent="."]

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_l5glv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
